fix: overflow-wrap anywhere on any p

--- a/agir/front/components/genericComponents/style.scss
+++ b/agir/front/components/genericComponents/style.scss
@@ -233,3 +233,7 @@ output {
   line-height: $line-height-base;
   color: $black500;
 }
+
+p {
+  overflow-wrap: anywhere;
+}
